--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -326,6 +326,9 @@ p
     padding: 0
     width: auto
 
+  #header ul.nav_user
+    display: none
+
   header #slideToNav
     display: none !important
 
